--- a/fitsmeright/Scences/Main/ProfileVC/ProfileVC.storyboard
+++ b/fitsmeright/Scences/Main/ProfileVC/ProfileVC.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,8 +17,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRa-XL-vLf">
-                                <rect key="frame" x="166" y="333" width="42" height="21"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tan-At-E1k" userLabel="TopView">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                                <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zRa-XL-vLf">
+                                <rect key="frame" x="183.5" y="333" width="8" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -27,7 +30,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="tan-At-E1k" firstAttribute="top" secondItem="9jJ-2u-gTN" secondAttribute="top" id="0gF-0y-G30"/>
+                            <constraint firstItem="tan-At-E1k" firstAttribute="leading" secondItem="897-iu-dkr" secondAttribute="leading" id="3Pv-AU-GBR"/>
                             <constraint firstItem="zRa-XL-vLf" firstAttribute="centerX" secondItem="897-iu-dkr" secondAttribute="centerX" id="4h5-H2-5Yh"/>
+                            <constraint firstAttribute="trailing" secondItem="tan-At-E1k" secondAttribute="trailing" id="XX8-iS-SoE"/>
+                            <constraint firstItem="897-iu-dkr" firstAttribute="top" secondItem="tan-At-E1k" secondAttribute="bottom" id="axm-gk-rA5"/>
                             <constraint firstItem="zRa-XL-vLf" firstAttribute="centerY" secondItem="897-iu-dkr" secondAttribute="centerY" id="uv3-KH-YTZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="897-iu-dkr"/>
