--- a/fitsmeright/Resources/Layouts/V/CreatePostView.xib
+++ b/fitsmeright/Resources/Layouts/V/CreatePostView.xib
@@ -9,9 +9,18 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreatePostView" customModule="fitsmeright" customModuleProvider="target">
+            <connections>
+                <outlet property="imgv_01" destination="Yw5-dD-CBc" id="qDr-Sg-esD"/>
+                <outlet property="imgv_02" destination="F0K-ux-Le8" id="gBa-9f-eSz"/>
+                <outlet property="imgv_03" destination="Le3-Ou-0qu" id="gOP-gb-eU4"/>
+                <outlet property="imgv_04" destination="j5r-Hw-ln2" id="kYW-Sh-GSt"/>
+                <outlet property="imgv_background" destination="JPA-3b-GWn" id="ul1-ok-nb7"/>
+                <outlet property="v_container" destination="W2t-Ab-vpi" id="twx-eh-jC9"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="W2t-Ab-vpi" customClass="CreatePostView" customModule="fitsmeright" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="W2t-Ab-vpi">
             <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -65,13 +74,6 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="1yc-Ip-aaY"/>
-            <connections>
-                <outlet property="imgv_01" destination="Yw5-dD-CBc" id="NMG-FS-eKp"/>
-                <outlet property="imgv_02" destination="F0K-ux-Le8" id="X0r-u9-biZ"/>
-                <outlet property="imgv_03" destination="Le3-Ou-0qu" id="GFW-CL-Dcj"/>
-                <outlet property="imgv_04" destination="j5r-Hw-ln2" id="pbp-RY-phY"/>
-                <outlet property="imgv_background" destination="JPA-3b-GWn" id="g7I-tx-iKo"/>
-            </connections>
         </view>
     </objects>
 </document>
