--- a/fitsmeright/Scences/Main/Feed/CreatePost/CreatePostDesignVC/CreatePostDesignVC.storyboard
+++ b/fitsmeright/Scences/Main/Feed/CreatePost/CreatePostDesignVC/CreatePostDesignVC.storyboard
@@ -28,6 +28,10 @@
                                     <constraint firstAttribute="width" secondItem="9ZH-ic-fWw" secondAttribute="height" multiplier="1:1" id="lCq-iF-xeW"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VgF-66-5tj" customClass="CreateTextView" customModule="fitsmeright" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="375"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CIZ-ZL-Wjx">
                                 <rect key="frame" x="20" y="603" width="335" height="44"/>
                                 <subviews>
@@ -66,10 +70,14 @@
                             <constraint firstAttribute="trailing" secondItem="ysj-aP-1y6" secondAttribute="trailing" id="1XL-SA-qOV"/>
                             <constraint firstItem="9ZH-ic-fWw" firstAttribute="top" secondItem="Tub-nd-PSt" secondAttribute="top" id="3Pp-4g-lu5"/>
                             <constraint firstItem="Tub-nd-PSt" firstAttribute="trailing" secondItem="CIZ-ZL-Wjx" secondAttribute="trailing" constant="20" id="3VC-rQ-oKi"/>
+                            <constraint firstItem="VgF-66-5tj" firstAttribute="top" secondItem="9ZH-ic-fWw" secondAttribute="top" id="4M6-fG-Q6Y"/>
+                            <constraint firstItem="VgF-66-5tj" firstAttribute="trailing" secondItem="9ZH-ic-fWw" secondAttribute="trailing" id="4kV-fR-jFB"/>
                             <constraint firstItem="ysj-aP-1y6" firstAttribute="leading" secondItem="coq-jX-e2O" secondAttribute="leading" id="9lY-e7-gNl"/>
                             <constraint firstItem="ysj-aP-1y6" firstAttribute="top" secondItem="coq-jX-e2O" secondAttribute="top" id="Eh9-cq-KRO"/>
                             <constraint firstItem="Tub-nd-PSt" firstAttribute="trailing" secondItem="9ZH-ic-fWw" secondAttribute="trailing" id="Fxk-pJ-UHU"/>
                             <constraint firstItem="ysj-aP-1y6" firstAttribute="bottom" secondItem="Tub-nd-PSt" secondAttribute="top" id="J76-7d-9YE"/>
+                            <constraint firstItem="VgF-66-5tj" firstAttribute="bottom" secondItem="9ZH-ic-fWw" secondAttribute="bottom" id="VPh-WZ-AFq"/>
+                            <constraint firstItem="VgF-66-5tj" firstAttribute="leading" secondItem="9ZH-ic-fWw" secondAttribute="leading" id="dYI-Wv-T6A"/>
                             <constraint firstItem="9ZH-ic-fWw" firstAttribute="leading" secondItem="Tub-nd-PSt" secondAttribute="leading" id="hdL-UH-VkJ"/>
                             <constraint firstItem="CIZ-ZL-Wjx" firstAttribute="leading" secondItem="Tub-nd-PSt" secondAttribute="leading" constant="20" id="qAH-Mu-ea1"/>
                             <constraint firstItem="Tub-nd-PSt" firstAttribute="bottom" secondItem="CIZ-ZL-Wjx" secondAttribute="bottom" constant="20" id="seO-k8-HUo"/>
@@ -77,10 +85,11 @@
                         <viewLayoutGuide key="safeArea" id="Tub-nd-PSt"/>
                     </view>
                     <connections>
-                        <outlet property="btn_addBackground" destination="yxO-Lm-eIe" id="4Me-ik-9U2"/>
-                        <outlet property="btn_addText" destination="hd6-am-BqE" id="b2f-59-7ni"/>
-                        <outlet property="btn_brush" destination="jI2-WZ-s94" id="3P2-ZI-Lmp"/>
+                        <outlet property="btn_editBackground" destination="yxO-Lm-eIe" id="4Me-ik-9U2"/>
+                        <outlet property="btn_editBrush" destination="jI2-WZ-s94" id="3P2-ZI-Lmp"/>
+                        <outlet property="btn_editText" destination="hd6-am-BqE" id="b2f-59-7ni"/>
                         <outlet property="v_createPost" destination="9ZH-ic-fWw" id="dwU-sk-hLS"/>
+                        <outlet property="v_createText" destination="VgF-66-5tj" id="RkJ-J0-1EC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uW6-cE-i8u" userLabel="First Responder" sceneMemberID="firstResponder"/>
